# qf_api_sample

./: .gitignore  LICENSE.txt  README.md
sample/cycle_export/: README.md  csv_get_test_cycle_urls.py  download_under_project.py  requirements.txt
sample/post_automated_test_results/: config.ini  main.py  pyproject.toml  pytest.ini  requirements.txt
sample/post_automated_test_results/modules/: api.py  result.py
sample/post_automated_test_results/tests/: test_sample.py
sample/suites_import/: ImportTestCase.py  README.md  format.py  requirements.txt  settings.py
sample/testblocker_setting/: README.md  TestBlock.py  settings.py
