[tool.poetry]
name = "post_automated_test_results"
version = "1.0"
description = ""
authors = ["Hayato Yabusaki <hayato.yabusaki@veriserve.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.3"
junitparser = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
